--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Fredoka', sans-serif;
 }
 
+/* TITLE AND PARAGRAPH */
+
 .container{
-    margin-right: 200px;
-    margin-left: 200px;
+    margin-right: 100px;
+    margin-left: 100px;
+    max-width: 1170px;
     text-align: center;
 }
 
@@ -14,6 +18,44 @@ h1{
     color: #e53070;
     margin-top: 30px;
     margin-bottom: 40px;
-    font-family: 'Fredoka', sans-serif; 
-    
 }
+
+/* FINE TITLE AND PARAGRAPH */
+
+/* MAIN */
+
+img{
+    height: 80px;
+    margin-right: 10px;
+    float: left;
+}
+
+
+.container-photo{
+    content: '';
+    display: table;
+    clear: both;
+    margin-top: 30px;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.riga{
+    background-color: black;
+    width: 300px;
+    color: white;
+    height: 80px;
+    text-align: left;
+    padding: 7px;
+}
+
+.margin{
+    margin-bottom: 2px;
+}
+
+a{
+    text-decoration: none;
+    color: #4da2C6;
+}
+
+/* FINE MAIN */
