--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ img{
 }
 
 .cols{
-    contain: "";
+    content: "";
     display: table;
     clear: both;
     height: 80px;
@@ -48,7 +48,7 @@ img{
     color: white;
     height: 80px;
     text-align: left;
-    float: right;
+    float: right; 
     width: 250px;
 }
 
